--- a/src/components/search/searchPageHeader.style.client.css
+++ b/src/components/search/searchPageHeader.style.client.css
@@ -3,3 +3,11 @@
     height: 300px;
     margin-bottom: 30px;
 }
+
+.header-adj {
+    width: auto;
+    height: 100px;
+    margin-bottom: 20px;
+}
+
+
